fixed overflow on the work section

--- a/assets/style.css
+++ b/assets/style.css
@@ -256,13 +256,13 @@ footer p {
   font-size: 1em;
   margin: 20px 0;
 }
-footer .submit-btn input{
+footer .submit-btn input {
   background-color: red;
 }
-footer .submit-btn input:hover{
+footer .submit-btn input:hover {
   cursor: pointer;
   background-color: darkred;
-  transition: .2s;
+  transition: 0.2s;
 }
 
 /* media queries Tablet  */
@@ -340,6 +340,7 @@ footer .submit-btn input:hover{
 
   /* work section  */
   .work .container .container-right a img {
+    height: 70rem;
     width: 99%;
     padding: 20px;
   }
@@ -356,16 +357,16 @@ footer .submit-btn input:hover{
   /* footer section  */
   footer form {
     width: 415px;
-}
+  }
 
-.user-textarea #userInput {
-  width: 300px;
-  height: 130px;
-  border: 3px solid black;
-  border-radius: 10px;
-  font-size: 1.2em;
+  .user-textarea #userInput {
+    width: 300px;
+    height: 130px;
+    border: 3px solid black;
+    border-radius: 10px;
+    font-size: 1.2em;
+  }
 }
-
 /* mobile */
 @media screen and (max-width: 575px) {
   /* header  */
@@ -403,6 +404,10 @@ footer .submit-btn input:hover{
     font-size: 1em;
   }
 
+  .work .container .container-right a img {
+    height: 40rem;
+  }
+
   .work .container #wrapper h2 {
     margin: 0;
   }
@@ -431,14 +436,14 @@ footer .submit-btn input:hover{
     height: 80%;
     align-items: center;
   }
-  footer .input-name{
+  footer .input-name {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 200px;
     padding: 0;
   }
-  footer .input-email{
+  footer .input-email {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -486,17 +491,20 @@ footer .submit-btn input:hover{
       margin: 0;
       width: 150px;
     }
+    .work .container .container-right a img {
+      height: 20rem;
+    }
     .work .container .container-right h3 {
       text-align: center;
       padding: 0;
     }
   }
-  @media screen and (max-width: 240px){
-    footer .input-name{   
+  @media screen and (max-width: 240px) {
+    footer .input-name {
       width: 150px;
     }
 
-    footer .input-email{
+    footer .input-email {
       width: 150px;
     }
     .user-textarea #userInput {
